--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "dotnet.defaultSolution": "Slox.slnx"
+    "dotnet.defaultSolution": "Slox.slnx",
+    "cSpell.words": [
+        "slox"
+    ]
 }
